After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779733 - Crash when adding a new event via edit dialog
Crash when adding a new event via edit dialog
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.23.x
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-07 22:36 UTC by Sebastian Keller
Modified: 2017-03-19 09:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gcal-window: Fix 'calendar crashes when adding new event through edit dialog' (1.08 KB, patch)
2017-03-10 12:34 UTC, Yash
none Details | Review
window: Set edit_dialog's event to NULL at the right postion so SIEGSEV does not occur (1.25 KB, patch)
2017-03-10 12:51 UTC, Yash
none Details | Review
window: set edit dialog's event to NULL after saving (1.29 KB, patch)
2017-03-12 15:41 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Sebastian Keller 2017-03-07 22:36:42 UTC
With 3.23.91.1 (and the latest git checkout) gnome-calendar crashes when trying to add a new event via the the dialog that shows up when clicking on "Edit Details...". Adding events using the popup window works fine.

  • #0 gcal_manager_create_event
    at gnome-calendar/src/gcal-manager.c line 1480
  • #1 edit_dialog_closed
    at gnome-calendar/src/gcal-window.c line 1144
  • #2 g_cclosure_marshal_VOID__INTv
    at glib/gobject/gmarshal.c line 1200
  • #3 _g_closure_invoke_va
    at glib/gobject/gclosure.c line 867
  • #4 g_signal_emit_valist
    at glib/gobject/gsignal.c line 3300
  • #5 g_signal_emit
    at glib/gobject/gsignal.c line 3447
  • #6 gtk_dialog_response
    at gtk+-3/gtk/gtkdialog.c line 1235
  • #7 gcal_edit_dialog_action_button_clicked
    at gnome-calendar/src/gcal-edit-dialog.c line 691
  • #8 g_cclosure_marshal_VOID__VOIDv
    at glib/gobject/gmarshal.c line 905
  • #9 _g_closure_invoke_va
    at glib/gobject/gclosure.c line 867
  • #10 g_signal_emit_valist
    at glib/gobject/gsignal.c line 3300
  • #11 g_signal_emit
    at glib/gobject/gsignal.c line 3447
  • #12 gtk_button_clicked
    at gtk+-3/gtk/gtkbutton.c line 1539
  • #13 gtk_button_do_release
    at gtk+-3/gtk/gtkbutton.c line 1843
  • #14 gtk_real_button_released
    at gtk+-3/gtk/gtkbutton.c line 1961
  • #15 g_cclosure_marshal_VOID__VOIDv
    at glib/gobject/gmarshal.c line 905
  • #16 g_type_class_meta_marshalv
    at glib/gobject/gclosure.c line 1024
  • #17 _g_closure_invoke_va
    at glib/gobject/gclosure.c line 867
  • #18 g_signal_emit_valist
    at glib/gobject/gsignal.c line 3300
  • #19 g_signal_emit
    at glib/gobject/gsignal.c line 3447
  • #20 multipress_released_cb
    at gtk+-3/gtk/gtkbutton.c line 666
  • #21 ffi_call_unix64
    from /lib64/libffi.so.6
  • #22 ffi_call
    from /lib64/libffi.so.6
  • #23 g_cclosure_marshal_generic_va
    at glib/gobject/gclosure.c line 1604
  • #24 _g_closure_invoke_va
    at glib/gobject/gclosure.c line 867
  • #25 g_signal_emit_valist
    at glib/gobject/gsignal.c line 3300
  • #26 g_signal_emit
    at glib/gobject/gsignal.c line 3447
  • #27 gtk_gesture_multi_press_end
    at gtk+-3/gtk/gtkgesturemultipress.c line 282
  • #28 g_cclosure_marshal_VOID__BOXEDv
    at glib/gobject/gmarshal.c line 1950
  • #29 g_type_class_meta_marshalv
    at glib/gobject/gclosure.c line 1024
  • #30 _g_closure_invoke_va
    at glib/gobject/gclosure.c line 867
  • #31 g_signal_emit_valist
    at glib/gobject/gsignal.c line 3300
  • #32 g_signal_emit
    at glib/gobject/gsignal.c line 3447
  • #33 _gtk_gesture_set_recognized
    at gtk+-3/gtk/gtkgesture.c line 345
  • #34 _gtk_gesture_check_recognized
    at gtk+-3/gtk/gtkgesture.c line 386
  • #35 gtk_gesture_handle_event
    at gtk+-3/gtk/gtkgesture.c line 777
  • #36 gtk_gesture_single_handle_event
    at gtk+-3/gtk/gtkgesturesingle.c line 221
  • #37 gtk_event_controller_handle_event
    at gtk+-3/gtk/gtkeventcontroller.c line 230
  • #38 _gtk_widget_run_controllers
    at gtk+-3/gtk/gtkwidget.c line 7359
  • #39 gtk_widget_real_button_event
    at gtk+-3/gtk/gtkwidget.c line 7134
  • #40 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 131
  • #41 g_type_class_meta_marshalv
    at glib/gobject/gclosure.c line 1024
  • #42 _g_closure_invoke_va
    at glib/gobject/gclosure.c line 867
  • #43 g_signal_emit_valist
    at glib/gobject/gsignal.c line 3300
  • #44 g_signal_emit
    at glib/gobject/gsignal.c line 3447
  • #45 gtk_widget_event_internal
    at gtk+-3/gtk/gtkwidget.c line 7724
  • #46 gtk_widget_event
    at gtk+-3/gtk/gtkwidget.c line 7294
  • #47 propagate_event_up
    at gtk+-3/gtk/gtkmain.c line 2568
  • #48 propagate_event
    at gtk+-3/gtk/gtkmain.c line 2670
  • #49 gtk_propagate_event
    at gtk+-3/gtk/gtkmain.c line 2705
  • #50 gtk_main_do_event
    at gtk+-3/gtk/gtkmain.c line 1901
  • #51 _gdk_event_emit
    at gtk+-3/gdk/gdkevents.c line 73
  • #52 gdk_event_source_dispatch
    at gtk+-3/gdk/x11/gdkeventsource.c line 367
  • #53 g_main_dispatch
    at glib/glib/gmain.c line 3203
  • #54 g_main_context_dispatch
    at glib/glib/gmain.c line 3856
  • #55 g_main_context_iterate
    at glib/glib/gmain.c line 3929
  • #56 g_main_context_iteration
    at glib/glib/gmain.c line 3990
  • #57 g_application_run
    at glib/gio/gapplication.c line 2381
  • #58 main
    at gnome-calendar/src/main.c line 43

Comment 1 Yash 2017-03-10 12:34:26 UTC
Created attachment 347622 [details] [review]
gcal-window: Fix 'calendar crashes when adding new event through edit dialog'

Earlier the app used to crash when a new event was added using the 'Edit Details' button/dialog.
This patch fixes the above-mentioned issue.
Comment 2 Yash 2017-03-10 12:51:48 UTC
Created attachment 347624 [details] [review]
window: Set edit_dialog's event to NULL at the right postion so SIEGSEV does not occur

Earlier the app used to crash when a new event was added using the 'Edit Details' buttion/dialog.
This was happening because edit_dialog's event was set to NULL before the event was being stored in the calendar
through the 'edit_dialog' and hence the app was crashing.
This patch fixes the above-mentioned issue.
Comment 3 Georges Basile Stavracas Neto 2017-03-12 15:39:08 UTC
Review of attachment 347624 [details] [review]:

Looks good to me
Comment 4 Georges Basile Stavracas Neto 2017-03-12 15:39:12 UTC
Review of attachment 347624 [details] [review]:

Looks good to me
Comment 5 Georges Basile Stavracas Neto 2017-03-12 15:41:20 UTC
Created attachment 347756 [details] [review]
window: set edit dialog's event to NULL after saving

Earlier the app used to crash when a new event was added using the
'Edit Details' buttion/dialog. This was happening because edit dialog's
event was set to NULL before the event was being stored in the calendar
through the 'edit_dialog' and hence the app was crashing.

This patch fixes the above-mentioned issue by saving the event before
setting the edit dialog's event to NULL.
Comment 6 Georges Basile Stavracas Neto 2017-03-12 15:42:51 UTC
Thanks for the fix. I took the liberty to improve the commit message a big. Please read it and keep that in mind for the next patches.

Attachment 347756 [details] pushed as 6f87ada - window: set edit dialog's event to NULL after saving
Comment 7 Yash 2017-03-12 15:46:20 UTC
@Georges: Thanks. Will not repeat the commit message format blunder again.
Comment 8 Catalin Iacob 2017-03-19 09:11:40 UTC
Don't know if there's another release of the 3.22 branch planned but this is also happening in Fedora 25 so it could use a backport.